--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
+    "date-fns": "^2.28.0",
     "ethers": "^5.5.4",
     "next": "12.1.0",
     "react": "17.0.2",
